@@ -6,14 +6,13 @@ use warnings;
 use XML::Simple;
 use Digest::MD5 qw(md5_base64);
 
-#use Ocsinventory::Agent::XML::Prolog;
-
 sub new {
   my (undef, $params) = @_;
 
   my $self = {};
-  $self->{config} = $params->{config};
-  $self->{accountinfo} = $params->{accountinfo};
+  $self->{config} = $params->{context}->{config};
+
+  $self->{logger} = $params->{context}->{logger};
 
   die unless ($self->{config}->{deviceid}); #XXX
 
@@ -33,13 +32,10 @@ sub dump {
 sub getContent {
   my ($self, $args) = @_;
 
-  $self->{accountinfo}->setAccountInfo($self);
   my $content=XMLout( $self->{xmlroot}, RootName => 'REQUEST', XMLDecl => '<?xml version="1.0" encoding="UTF-8"?>',
     SuppressEmpty => undef );
 
   return $content;
 }
-
-
 
 1;
